delete function added

--- a/index.html
+++ b/index.html
@@ -18,6 +18,7 @@
                     <input class="item-description" type="text" placeholder="Task for today...">
                     <button id="add-item">Add</button>
                 </div>
+                <button class="delete">Delete</button>
             </div>
         </div>
     </section>
